# ai_pr_review_agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  report.md  requirements-dev.txt  requirements.txt  setup.py
config/: config.example.yaml  config.yaml
docs/: adapters.md  cli_guide.md  git_integration.md  github_cli_guide.md  models_reference.md  quick_start_github.md  reporter_guide.md
examples/: engine_demo.py  git_analysis_demo.py  logging_demo.py  models_demo.py  reporter_demo.py  static_analysis_demo.py  test_github_integration.py
src/ai_pr_agent/: __init__.py  cli.py
src/ai_pr_agent/adapters/: __init__.py  base.py  factory.py  github.py
src/ai_pr_agent/analyzers/: __init__.py  base.py  mock.py  static.py
src/ai_pr_agent/cache/: __init__.py  manager.py
src/ai_pr_agent/config/: __init__.py  settings.py
src/ai_pr_agent/core/: __init__.py  engine.py  exceptions.py  helpers.py  models.py
src/ai_pr_agent/reporters/: __init__.py  formatter.py  github_reporter.py
src/ai_pr_agent/utils/: __init__.py  cli_helpers.py  git_parser.py  logger.py
tests/: README.md  conftest.py  utils.py
tests/fixtures/: sample_config.yaml  sample_diff.txt  sample_github_files.json  sample_github_pr.json
tests/integration/: test_cache_integration.py  test_git_integration.py  test_github_integration.py
tests/unit/: __init__.py  test_adapter_factory.py  test_base_adapter.py  test_cache.py  test_cli.py  test_config.py  test_engine.py  test_example_best_practices.py  test_formatter.py  test_git_parser.py  test_github_adapter.py  test_github_reporter.py  test_logging.py  test_models.py  test_static_analyzer.py
